--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>innoRIID RADsync App</title>
+    <title>innoRIID Dev</title>
     <style>
         :root {
             --primary-color: #2563eb;
@@ -93,14 +93,14 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">innoRIID RADsync</div>
+            <div class="logo">innoRIID Dev</div>
         </div>
     </header>
 
     <main>
         <div class="container">
             <section class="hero">
-                <h1>Welcome to innoRIID RADsync</h1>
+                <h1>Welcome to innoRIID Dev</h1>
                 <p class="description">
                     Advanced radiation detection and synchronization platform for innovative monitoring solutions.
                 </p>
@@ -111,7 +111,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 innoRIID RADsync. All rights reserved.</p>
+            <p>&copy; 2025 innoRIID Dev. All rights reserved.</p>
         </div>
     </footer>
 </body>
