--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>innoRIID Dev</title>
     <style>
+        
+        /**
         :root {
             --primary-color: #2563eb;
             --secondary-color: #1e40af;
             --text-color: #1f2937;
             --background-color: #f3f4f6;
+        } 
+        **/
+
+        :root {
+            --primary-color: #1e40af; /* Darker shade for primary color */
+            --secondary-color: #2563eb; /* Lighter shade for secondary color */
+            --text-color: #f3f4f6; /* Light color for text */
+            --background-color: #1f2937; /* Dark color for background */
         }
         
         * {
@@ -24,6 +34,13 @@
             color: var(--text-color);
             background-color: var(--background-color);
         }
+
+        /** body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--background-color);
+        } **/
 
         .container {
             max-width: 1200px;
