--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="badge-container">
                     <!-- Google Play Store Badge -->
                     <a href='https://play.google.com/store/apps/details?id=com.innoriid.radsync&hl=en&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                        <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'/>
+                        <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'  style="height: 120px; width: auto;"/>
                     </a>
                     
                     <!-- Apple App Store Badge -->
