--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <header>
         <div class="logo">
             <a href="https://www.innoriid.eu" target="_blank">
-                <img src="img/logo.png" alt="innoRIID Dev Logo" style="height: 40px; width: auto;"/>
+                <img src="img/logo.png" alt="innoRIID Dev Logo" />
             </a>
         </div>
     </header>
