Add favicon to both pages and privacy policy link in footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>innoRIID Dev</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <style>
         :root {
             --primary-color: #1e40af;
@@ -173,7 +174,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 innoRIID / AMETEK. All rights reserved.</p>
+            <p>&copy; 2025 innoRIID / AMETEK. All rights reserved. | <a href="privacy-policy.html" style="color: var(--text-color); text-decoration: underline;">Privacy Policy</a></p>
         </div>
     </footer>
 </body>
