--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -180,7 +180,11 @@
         
         <ul>
             <li><strong>Device information</strong>: We collect information about your mobile device, including device model, operating system version, unique device identifiers, and mobile network information.</li>
-            <li><strong>Location information</strong>: With your permission, we collect precise location information from your device to show the position of measurement sources and to provide mapping features. This location data is only stored locally on your device to annotate your data and is never transmitted to our company or any third parties. You have full control over whether to save or delete this location information.</li>
+            <li><strong>Location information</strong>: With your permission, we collect precise location information from your device, including background location access, to show the position of measurement sources and to provide mapping features. Background location access is specifically used to record GPS coordinates in measurement log files while you perform backpack radiation surveys, even when your phone screen is locked. This location data:
+                • Is only collected during active measurement sessions
+                • Is stored locally in log files on your device
+                • Can be shared with experts as part of measurement logs when you explicitly choose to export them for evaluation
+            This location data is never transmitted to our company or any third parties unless included in measurement logs that you explicitly choose to share. You have full control over whether to save, delete, or share this location information.</li>
             <li><strong>Usage data</strong>: We collect information about how you use the App, including the features you use, the time spent on the App, and other usage statistics.</li>
             <li><strong>Bluetooth data</strong>: With your permission, we collect information about nearby Bluetooth devices to connect with compatible radiation detection equipment.</li>
             <li><strong>Camera/Images</strong>: With your permission, the app may access your camera to take pictures of radiation sources. These images are stored locally on your device and can be included in reports that you choose to share via email with experts for evaluation. You have full control over whether to save or delete these images.</li>
@@ -214,7 +218,7 @@
         <ul>
             <li><strong>Internet access</strong>: To connect to network radiation detection devices. The app does not use internet access to send your data to our servers.</li>
             <li><strong>Bluetooth</strong>: To connect with compatible radiation detection devices</li>
-            <li><strong>Location</strong>: To provide mapping and location-based features and to annotate your data with location information. Your location data remains on your device and is never sent to our servers.</li>
+            <li><strong>Location and Background Location</strong>: To provide mapping and location-based features and to annotate your data with location information, including during active measurement sessions when the screen is locked. Your location data remains on your device unless you explicitly choose to share measurement logs containing this data with experts for evaluation.</li>
             <li><strong>Storage</strong>: To save data, reports, and settings on your device</li>
             <li><strong>Camera</strong>: To take photos that may be included in reports</li>
             <li><strong>Notifications</strong>: To alert you about important events and readings</li>
